# vmem2

./: .gitmodules  CMakeLists.txt  appveyor.yml  build.cmd
facade/: CMakeLists.txt  facade.cpp
include/: vmem2.h
lib/: vmem2.def  vmem2.lib  vmem2.x64.lib
plugin/: CMakeLists.txt  plugin.cpp
